--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@hotwired/turbo": "^7.1.0",
     "cssnano": "^4.1.10",
     "del": "^5.1.0",
     "gulp": "^4.0.2",
@@ -21,7 +22,6 @@
     "merge2": "^1.2.2",
     "postcss": "^7.0.2",
     "postcss-cli": "^6.1.0",
-    "postcss-preset-env": "^6.7.0",
-    "@hotwired/turbo": "^7.1.0"
+    "postcss-preset-env": "^6.7.0"
   }
 }
