--- a/package.json
+++ b/package.json
@@ -10,10 +10,6 @@
   "author": "NSDCF",
   "license": "ISC",
   "devDependencies": {
-    "@hotwired/turbo": "^7.1.0",
-    "cssnano": "^4.1.10",
-    "postcss": "^8.4.5",
-    "postcss-preset-env": "^7",
-    "postcss-cli": "^9.1.0"
+    "@hotwired/turbo": "^7.1.0"
   }
 }
