Adjust news list styles, pagination partial
No longer uses hugo's internal pagination partial for better
control of ellipses in pagination.

--- a/config.toml
+++ b/config.toml
@@ -11,6 +11,11 @@ metaDataFormat      = "toml"
 summaryLength       = 50
 pluralizeListTitles = false
 
+paginate = 9
+
+[params.pagination]
+  pagesBetweenActive = 4
+
 [mediaTypes]
   [mediaTypes."text/netlify"]
     delimiter = ""
