Hugo mod replacements in development env

--- a/config/development/config.toml
+++ b/config/development/config.toml
@@ -1,6 +1,5 @@
 # Development env config
 disableAliases = false
 
-# [module]
-#   [[module.imports]]
-#     path = "/Users/tom/code/nsdcf-theme/"
+[module]
+replacements = 'github.com/nsdcf/nsdcf-theme -> /Users/tom/code/nsdcf-theme/'
