--- a/config/development/config.toml
+++ b/config/development/config.toml
@@ -2,4 +2,4 @@
 disableAliases = false
 
 [module]
-replacements = 'github.com/nsdcf/nsdcf-theme -> ../../nsdcf-theme/,github.com/nsdcf/nsdcf-shared-content -> ../../nsdcf-shared-content/'
+replacements = 'github.com/nsdcf/nsdcf-theme -> ../../theme/,github.com/nsdcf/nsdcf-shared-content -> ../../shared-content/'
